--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 						I am an <a href="https://www.cob.calpoly.edu/directory/profile/kathryn-vasilaky/">Assistant Professor</a> at the Department of Economics, Orfalea College of Business, Cal Poly.
 						 <!-- where I teach Econ 201 and <a href="http://catalog.calpoly.edu/search/?P=ECON%20395">Econ 395</a>.  -->
 						<br></br>
-						My research topics are situated in experimental and development economics, utilizing lab experiments in the field, and randomized control trials (RCT). My secondary work is in regularization methods that address ill-conditioned data, relevant to high dimensional problems.
+						My research topics are situated in experimental and development economics, utilizing lab experiments in the field, and randomized control trials (RCT). My secondary work is in the intersection of econometrics and machine learning, including bias correction methods and regularization methods for high dimensional problems.
 
 
 						 <!-- I'm interested in how social networks and group behavior affect information sharing and technology adoption, and how this differs across gender.  -->
