--- a/field.html
+++ b/field.html
@@ -57,7 +57,7 @@
 						
 						<p>
 
-Co-Principal Investigator, USDA, <a href = "http://gcgh.grandchallenges.org/grant/multimodal-satellite-rainfall-measurement-index-insurance"> Immigration Reform and Farm Labor Shortages</a>, $500,000, 2019-2021
+Co-Principal Investigator, USDA, Immigration Reform and Farm Labor Shortages $500,000, 2019-2021
 <br></br>
 Co-Principal Investigator, Bill and Melinda Gates Foundation, <a href = "http://gcgh.grandchallenges.org/grant/multimodal-satellite-rainfall-measurement-index-insurance"> Multimodal Satellite Rainfall Measurement for Index Insurance</a>, $100,000, 2016-2018
 <br></br>
