--- a/publications.html
+++ b/publications.html
@@ -54,6 +54,8 @@
 <h1>publications</h1>
 						
 <p> <br></br>
+	Vasilaky, Kathryn and Aurelie Harou, Katherine Alfredo, and Ishita Kapur "Water Depletion in Northern India: Myself or Others?"<em> World Development(2019), </em> R&R.
+	<br></br>
 	Montalvao, Joao, Markus Goldstein, Kenneth Leonard and Kathryn Vasilaky, "Girls' Empowerment, Sibling Rivalry, and Competitiveness: Evidence from a Randomized Control Trial and a Lab Experiment in Uganda." <em> Economic Development and Cultural Change,</em>  R&R.
 	<br></br>
 	Vasilaky, Kathryn, Rahel Diro, Michael Norton, Geoff McCarnery, and Daniel Osgood, "Can education unlock scale? The demand impact of educational games on a large-scale unsubsidised index insurance program in Ethiopia," (2018) <em> Journal of Development Studies, forthcoming</em>.
@@ -83,8 +85,6 @@
 	<br></br>
 	<!--Flory, Jeffrey, Kenneth Leonard, Magda Tsaneva and Kathryn Vasilaky, "Towards a Deeper Understanding of Female Competitiveness and the Gender Gap: Evidence from Patrilocal and Matrilocal Cultures using a Lab Experiment in the Field" (2017).-->
 	<br></br>
-	Vasilaky, Kathryn and Aurelie Harou, and Katherine Alfredo, "Water Depletion in Northern India: Myself or Others?"<em> Working Paper, (2017)</em>.
-
 	Vasilaky, Kathryn, Kentaro Toyama, Tushi Baul and Dean Karlan, "Learning Digitally: Evaluating the Impact of Farmer Training via Mediated Videos?" Jameel Poverty Action Lab,<em> Working Paper, (2016)</em>, and <a href="https://www.socialscienceregistry.org/trials/313"> Social Registry Trial 313.</a>
 
 	<br></br>
