--- a/publications.html
+++ b/publications.html
@@ -58,7 +58,7 @@
 	<br></br>
 	Montalvao, Joao, Markus Goldstein, Kenneth Leonard and Kathryn Vasilaky, "Girls' Empowerment, Sibling Rivalry, and Competitiveness: Evidence from a Randomized Control Trial and a Lab Experiment in Uganda." <em> Economic Development and Cultural Change,</em>  R&R.
 	<br></br>
-	Vasilaky, Kathryn, Rahel Diro, Michael Norton, Geoff McCarnery, and Daniel Osgood, "<a href = https://www.tandfonline.com/doi/abs/10.1080/00220388.2018.1554207> Can education unlock scale? The demand impact of educational games on a large-scale unsubsidised index insurance program in Ethiopia </a>" (2018) <em> Journal of Development Studies, forthcoming</em>.
+	Vasilaky, Kathryn, Rahel Diro, Michael Norton, Geoff McCarnery, and Daniel Osgood, "<a href = https://www.tandfonline.com/doi/abs/10.1080/00220388.2018.1554207> Can Education Unlock Scale? The Demand Impact of Educational Games on a Large-Scale Unsubsidised Index Insurance Programme in Ethiopia </a>" (2018) <em> Journal of Development Studies, DOI: 10.1080/00220388.2018.1554207</em>.
 	
 	<br></br>
 	Vasilaky, Kathryn and Kenneth Leonard, "<a href = https://www.journals.uchicago.edu/doi/10.1086/697430> As Good as the Networks They Keep?: Improving Outcomes through Weak Ties in Uganda</a>," (2018) <em> Economic Development and Cultural Change, 66(4): 755-792. </em>
