--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
 						
 						<p>								
 
-						I am an <a href="https://www.cob.calpoly.edu/directory/profile/kathryn-vasilaky/">Assistant Professor</a> at the Department of Economics, Orfalea College of Business, Cal Poly.
+						I am an <a href="https://www.cob.calpoly.edu/directory/profile/kathryn-vasilaky/">Assistant Professor</a> at the Department of Economics, Orfalea College of Business, Cal Poly and Research Affiliate at the International Research Institute for Climate and Society at Columbia University. 
+
 						 <!-- where I teach Econ 201 and <a href="http://catalog.calpoly.edu/search/?P=ECON%20395">Econ 395</a>.  -->
 						<br></br>
 						My research topics are situated in experimental and development economics, utilizing lab experiments in the field, and randomized control trials (RCT). My secondary work is in the intersection of econometrics and machine learning, including bias correction methods and regularization methods for high dimensional problems.
