--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 						
 						<br></br>
 
-						In line with my research, I believe in making stem accessible and free in an inclusive learning environment. To this end I co-ran<font color="#0183E5"><noframes></noframes> <a href="https://www.meetup.com/NYC-PyLadies/"> Pyladies NYC</a></font>, taught for<a href="https://girlswhocode.com"> Girls Who Code</a>, currently co-run <a href="https://www.meetup.com/PydataSLO/"> PyData SLO</a> and <a href="https://groups.google.com/d/forum/women-in-econ"> Women in Economics</a>, and am a mentor for <a href="https://beaconmentors.calpoly.edu/network">Beacon</a> at Cal Poly, and for the <a href="https://fcni.org/">Family Care Network</a> in San Luis Obispo. 
+						In line with my research, I believe in making education accessible and free in an inclusive learning environment. To this end I co-ran<font color="#0183E5"><noframes></noframes> <a href="https://www.meetup.com/NYC-PyLadies/"> Pyladies NYC</a></font>, taught for<a href="https://girlswhocode.com"> Girls Who Code</a>, currently co-run <a href="https://www.meetup.com/PydataSLO/"> PyData SLO</a> and <a href="https://groups.google.com/d/forum/women-in-econ"> Women in Economics</a>, and am a mentor for <a href="https://beaconmentors.calpoly.edu/network">Beacon</a> at Cal Poly, and for the <a href="https://fcni.org/">Family Care Network</a> in San Luis Obispo. 
 
 
 
