--- a/publications.html
+++ b/publications.html
@@ -54,9 +54,9 @@
 <h1>publications</h1>
 						
 <p> <br></br>
-	Vasilaky, Kathryn and Aurelie Harou, Katherine Alfredo, and Ishita Kapur "Water Depletion in Northern India: Myself or Others?" (2019) <em> World Development, </em> R&R.
+	Montalvao, Joao, Markus Goldstein, Kenneth Leonard and Kathryn Vasilaky, "Girls' Empowerment, Sibling Rivalry, and Competitiveness: Evidence from a Randomized Control Trial and a Lab Experiment in Uganda," (2019) <em> </em>  R&R.
 	<br></br>
-	Montalvao, Joao, Markus Goldstein, Kenneth Leonard and Kathryn Vasilaky, "Girls' Empowerment, Sibling Rivalry, and Competitiveness: Evidence from a Randomized Control Trial and a Lab Experiment in Uganda," (2019) <em> Economic Development and Cultural Change,</em>  R&R.
+	Vasilaky, Kathryn and Aurelie Harou, Katherine Alfredo, and Ishita Kapur "Water Depletion in Northern India: Myself or Others?" (2019), R&R.
 	<br></br>
 	Vasilaky, Kathryn, Rahel Diro, Michael Norton, Geoff McCarnery, and Daniel Osgood, "<a href = https://www.tandfonline.com/doi/abs/10.1080/00220388.2018.1554207> Can Education Unlock Scale? The Demand Impact of Educational Games on a Large-Scale Unsubsidised Index Insurance Programme in Ethiopia</a>," (2018) <em> Journal of Development Studies, DOI: 10.1080/00220388.2018.1554207</em>.
 	
