--- a/field.html
+++ b/field.html
@@ -98,13 +98,17 @@ Tanzania (Bududa) “Markets for Cotton By-Products.” World Bank Development P
 <br></br>
 Uganda (Oyam and Bukedea) “Female Farmer Training and Agricultural Productivity.” World Bank Economics Research Group (dissertation), with Markus Goldstein, January 2009-April 2010.
 
-<h1>personal field work</h1>
-Gaspé, Quebec, Canada, Willing Workers on Organic Farms (serre et potager), Summer 2007
+<h1>Woofing - personal field work</h1>
+I'm an active Woofer (Willing Workers on Organic Farms), and believe it's an excellent way to learn how to live more sustainably. 
+<br></br>
+Nieva, Spain, Willing Workers on Organic Farms Spain (huelta), Summer 2019
+<br></br>
+Cauterets (Hautes-Pyrénées), France, Willing Workers on Organic Farms France (conserves et jard&iacuten), Summer 2017
 <br></br>
 Sainte Foy de Belves, Dordogne, France, Willing Workers on Organic Farms (chevre et fromage), Summer 2016
 <br></br>
-Cauterets (Hautes-Pyrénées), France, Willing Workers on Organic Farms (conserves et jardin), Summer 2017
-	<br></br>				
+Gaspé, Quebec, Canada, Willing Workers on Organic Farms (serr&eacute et potager), Summer 2007
+<br></br>				
 						
 					
 
