--- a/field.html
+++ b/field.html
@@ -98,7 +98,7 @@ Tanzania (Bududa) “Markets for Cotton By-Products.” World Bank Development P
 <br></br>
 Uganda (Oyam and Bukedea) “Female Farmer Training and Agricultural Productivity.” World Bank Economics Research Group (dissertation), with Markus Goldstein, January 2009-April 2010.
 
-<h1>Woofing - personal field work</h1>
+<h1>personal field work</h1>
 I'm an active volunteer in Woofing (Willing Workers on Organic Farms). First, I believe in having my own hands-on experience in agriculture as many of the studies that I conduct are with farmers. Second, it's an excellent way to learn how to live more sustainably. Third, it's a way to interact with other cultures and practice another language. 
 
 <a href = https://app.wwoof.fr> WOOF France</a> 
