--- a/field.html
+++ b/field.html
@@ -99,22 +99,16 @@ Tanzania (Bududa) “Markets for Cotton By-Products.” World Bank Development P
 Uganda (Oyam and Bukedea) “Female Farmer Training and Agricultural Productivity.” World Bank Economics Research Group (dissertation), with Markus Goldstein, January 2009-April 2010.
 
 <h1>personal field work</h1>
-I'm an active volunteer in Woofing (Willing Workers on Organic Farms). First, I believe in having my own hands-on experience in agriculture as many of the studies that I conduct are with farmers. Second, it's an excellent way to learn how to live more sustainably. Third, it's a way to interact with other cultures and practice another language. 
-
-<a href = https://app.wwoof.fr> WOOF France</a> 
-<br></br>
-<a href = https://wwoof.es/> WOOF Spain</a>
-<br></br>
-<a href = https://wwoofusa.org > Woof USA</a>
+I'm an active volunteer in Woofing (Willing Workers on Organic Farms). I believe in having my own hands-on experience in agriculture as many of the studies that I conduct are with farmers. 
 
 <br></br>
-Nieva, Spain, Willing Workers on Organic Farms Spain (huelta), Summer 2019
+Nieva, Spain, <a href = https://wwoof.es/> WOOF Spain</a> (huelta), Summer 2019
 <br></br>
-Cauterets (Hautes-Pyrénées), France, Willing Workers on Organic Farms France (conserves et jard&iacuten), Summer 2017
+Cauterets (Hautes-Pyrénées), France, <a href = https://app.wwoof.fr> WOOF France</a>(conserves et jard&iacuten), Summer 2017
 <br></br>
-Sainte Foy de Belves, Dordogne, France, Willing Workers on Organic Farms (chevre et fromage), Summer 2016
+Sainte Foy de Belves, Dordogne, France, <a href = https://app.wwoof.fr> WOOF France</a> (chevre et fromage), Summer 2016
 <br></br>
-Gaspé, Quebec, Canada, Willing Workers on Organic Farms (serr&eacute et potager), Summer 2007
+Gaspé, Quebec, Canada, <a href = https://wwoof.ca/> Woof Canada</a> (serr&eacute et potager), Summer 2007
 <br></br>				
 						
 					
