--- a/field.html
+++ b/field.html
@@ -102,13 +102,13 @@ Uganda (Oyam and Bukedea) “Female Farmer Training and Agricultural Productivit
 I'm an active volunteer in Woofing (Willing Workers on Organic Farms). I believe in having my own hands-on experience in agriculture as many of the studies that I conduct are with farmers. 
 
 <br></br>
-Nieva, Spain, <a href = https://wwoof.es/> WOOF Spain</a> (huelta), Summer 2019
+Nieva, Spain, <a href = https://wwoof.es/> WOOF Spain</a>, Summer 2019
 <br></br>
-Cauterets (Hautes-Pyrénées), France, <a href = https://app.wwoof.fr> WOOF France</a>(conserves et jard&iacuten), Summer 2017
+Cauterets (Hautes-Pyrénées), France, <a href = https://app.wwoof.fr> WOOF France</a>, Summer 2017
 <br></br>
-Sainte Foy de Belves, Dordogne, France, <a href = https://app.wwoof.fr> WOOF France</a> (chevre et fromage), Summer 2016
+Sainte Foy de Belves, Dordogne, France, <a href = https://app.wwoof.fr> WOOF France</a>, Summer 2016
 <br></br>
-Gaspé, Quebec, Canada, <a href = https://wwoof.ca/> Woof Canada</a> (serr&eacute et potager), Summer 2007
+Gaspé, Quebec, Canada, <a href = https://wwoof.ca/> Woof Canada</a>, Summer 2007
 <br></br>				
 						
 					
