--- a/research.html
+++ b/research.html
@@ -45,6 +45,8 @@
 								<br></br>
 								<a href="posts.html">seminars</a><br />
 								<br></br>
+								<a href="brownbag.html">cal poly brownbag</a><br />
+								<br></br>
 								<a href="cv.html">cv</a><br />
 
 				 			 </div>
