changed index file for example for class

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 		<div id="title">
 				<a href="#"><img src="images/header2.png" alt="" border="0" title="" /></a><br />
-				<h1><font color="#800000"><noframes></noframes> kathryn</font> <font color="#01a9e5"><noframes></noframes> (katya)</font>  <font color="#0183E5"><noframes></noframes> vasilaky</font></h1>
+				<h1><font color="#800000"><noframes></noframes> kathryn</font> <font color="#01a9e5"><noframes></noframes> FOO</font>  <font color="#0183E5"><noframes></noframes> vasilaky</font></h1>
 				<p>
 					
 				</p>
