--- a/publications.html
+++ b/publications.html
@@ -63,6 +63,10 @@
 	(<a href="target_input_model.pdf">Supplementary derivations,</a> for the Target-Input model with Bayesian updating)
 	<br></br>
 	Vasilaky, Kathryn and Asif Islam, "<a href= https://www.sciencedirect.com/science/article/pii/S0305750X17303479>By Team or By Tournament? Incentives for Sharing Information in an Experimental Game</a>," (2018) <em> World Development, 103: 216-225.
+	<br></br>
+		Z. Ovaisi, R. Ahsan, Y. Zhang, K. Vasilaky, E. Zheleva. Correcting for Selection Bias in Learning-to-rank Systems. 29th International World Wide Web Conference (WWW/WebConf) 2020.
+
+	Z. Ovaisi, R. Ahsan, Y. Zhang, K. Vasilaky, E. Zheleva, "<a href= https://www2020.thewebconf.org/program>Correcting for Selection Bias in Learning-to-rank Systems.</a>," (2020) <em> 29th International World Wide Web Conference (WWW/WebConf).
 </em>
 	<br></br>
 	Vasilaky, Kathryn, "<a href= https://academic.oup.com/ajae/article-abstract/95/2/376/70881?redirectedFrom=fulltext>Female Social Networks and Farmer Training: Can Randomized Information Exchange Improve Outcomes?</a>," (2013) <em> American Journal of Agricultural Economics, 95(2): 376-383.</em>
