--- a/publications.html
+++ b/publications.html
@@ -54,7 +54,8 @@
 				
 <h1>publications</h1>
 						
-<p> 
+<p> <br></br>
+	Z. Ovaisi, R. Ahsan, Y. Zhang, K. Vasilaky, E. Zheleva, "<a href= https://www2020.thewebconf.org/program>Correcting for Selection Bias in Learning-to-rank Systems.</a>," (2020) <em> 29th International World Wide Web Conference (WWW/WebConf).</em>
 	<br></br>
 	Vasilaky, Kathryn, Rahel Diro, Michael Norton, Geoff McCarnery, and Daniel Osgood, "<a href = https://www.tandfonline.com/doi/abs/10.1080/00220388.2018.1554207> Can Education Unlock Scale? The Demand Impact of Educational Games on a Large-Scale Unsubsidised Index Insurance Programme in Ethiopia</a>," (2018) <em> Journal of Development Studies, DOI: 10.1080/00220388.2018.1554207</em>.
 	
@@ -64,37 +65,29 @@
 	<br></br>
 	Vasilaky, Kathryn and Asif Islam, "<a href= https://www.sciencedirect.com/science/article/pii/S0305750X17303479>By Team or By Tournament? Incentives for Sharing Information in an Experimental Game</a>," (2018) <em> World Development, 103: 216-225.
 	<br></br>
-		Z. Ovaisi, R. Ahsan, Y. Zhang, K. Vasilaky, E. Zheleva. Correcting for Selection Bias in Learning-to-rank Systems. 29th International World Wide Web Conference (WWW/WebConf) 2020.
-
-	Z. Ovaisi, R. Ahsan, Y. Zhang, K. Vasilaky, E. Zheleva, "<a href= https://www2020.thewebconf.org/program>Correcting for Selection Bias in Learning-to-rank Systems.</a>," (2020) <em> 29th International World Wide Web Conference (WWW/WebConf).
-</em>
-	<br></br>
 	Vasilaky, Kathryn, "<a href= https://academic.oup.com/ajae/article-abstract/95/2/376/70881?redirectedFrom=fulltext>Female Social Networks and Farmer Training: Can Randomized Information Exchange Improve Outcomes?</a>," (2013) <em> American Journal of Agricultural Economics, 95(2): 376-383.</em>
 	<br></br>
-	Vasilaky, Kathryn and Michelle Brock, "Traversing the Landscape of Statiscal Power," (2019), <em></em> R&R.
+	
+	<h1>working papers</h1>
+
+<br></br>
+	Brock, Michelle, Kathryn Vasilaky, "Traversing the Landscape of Statiscal Power," (2019), <em></em> R&R.
 	<br></br>
-	Vasilaky, Kathryn and Daniel Osgood, "Diversification or Defection?: Randomizing Information About Members in Insurance Groups," (2019), <em></em> R&R.
+	Martinez, Sofia, Daniel Osgood, Radomst Stanimirova, Kathryn Vasilkay, "Diversification or Defection?: Randomizing Information About Members in Insurance Groups," (2019), <em></em> R&R.
 	<br></br>
-	Montalvao, Joao, Markus Goldstein, Kenneth Leonard and Kathryn Vasilaky, "Girls' Empowerment, Sibling Rivalry, and Competitiveness: Evidence from a Randomized Control Trial and a Lab Experiment in Uganda," (2019) <em> </em>  R&R.
+	Buehren, Niklas, Markus Goldstein, Kenneth Leonard, Joao Montalvao, Kathryn Vasilaky, "Girls' Empowerment, Sibling Rivalry, and Competitiveness: Evidence from a Randomized Control Trial and a Lab Experiment in Uganda," (2019) <em> </em>  R&R.
 	<br></br>
-	Vasilaky, Kathryn and Aurelie Harou, Katherine Alfredo, and Ishita Kapur "Water Depletion in Northern India: Myself or Others?" (2019),  <em></em> R&R.
+	Alfredo, Katherine, Aurelie Harou, Ishita Kapur, Kathryn Vasilaky, "Water Depletion in Northern India: Myself or Others?" (2019),  <em></em> R&R.
 	
 	<!-- World Bank Research Paper Vol. 12, No. 33, (2016) <em><a href="http://documents.worldbank.org/curated/en/743031468186845532/Womens-empowerment-sibling-rivalry-and-competitiveness-evidence-from-a-lab-experiment-and-a-randomized-control-trial-in-Uganda">Economic Development and Cultural Change</a></em>.-->
 	
-
-
-	
-
 	<br></br>
-
-	<h1>working papers</h1>
-	<br></br>
-	Hill, Ruth, Carolina Mejia-Mantilla andand Kathryn Vasilaky, "Vanishing Returns? Potential Returns and Constraints to Input Adoption among Smallholder Farmers in Uganda." World Bank Research Paper Vol. 1, No. 8627, (2018) <em><a href="http://documents.worldbank.org/curated/en/726321540832524595/Vanishing-Returns-Potential-Returns-and-Constraints-to-Input-Adoption-among-Smallholder-Farmers-in-Uganda">Working Paper</a></em>.
+	Hill, Ruth, Carolina Mejia-Mantilla, Kathryn Vasilaky, "Vanishing Returns? Potential Returns and Constraints to Input Adoption among Smallholder Farmers in Uganda." World Bank Research Paper Vol. 1, No. 8627, (2018) <em><a href="http://documents.worldbank.org/curated/en/726321540832524595/Vanishing-Returns-Potential-Returns-and-Constraints-to-Input-Adoption-among-Smallholder-Farmers-in-Uganda">Working Paper</a></em>.
 	<br></br>
 	<!--Flory, Jeffrey, Kenneth Leonard, Magda Tsaneva and Kathryn Vasilaky, "Towards a Deeper Understanding of Female Competitiveness and the Gender Gap: Evidence from Patrilocal and Matrilocal Cultures using a Lab Experiment in the Field" (2017).-->
 	<br></br>
-	Vasilaky, Kathryn, Kentaro Toyama, Tushi Baul, "Improving Smallholder Agriculture via Video-BasedGroup Extension" Jameel Poverty Action Lab,<em> Working Paper, (2016)</em>, and <a href="https://www.socialscienceregistry.org/trials/313"> Social Registry Trial 313.</a>
-
+	Baul, Tushi, Dean Karlan, Kentaro Toyama, Kathryn Vasilaky "Improving Smallholder Agriculture via Video-BasedGroup Extension" Jameel Poverty Action Lab,<em> Working Paper, (2016)</em>, and <a href="https://www.socialscienceregistry.org/trials/313"> Social Registry Trial 313.</a>, <a href="https://editorialexpress.com/cgi-bin/conference/download.cgi?db_name=NEUDC2015&paper_id=519 ">draft.</a>
+	
 	<br></br>
 	Vasilaky, Kathryn, "A Generalized Ridge Regression Using an Iterative Solution: the Inverse Problem in Regression Analysis with a Stopping Rule," Columbia University<em>, <a href="http://academiccommons.columbia.edu/catalog/ac%3A194857">Working Paper</a></em>, (2016) and accompanying <a href="https://github.com/kathrynthegreat/InverseProblem">git repo</a>. 
 	<br></br>
