--- a/publications.html
+++ b/publications.html
@@ -71,7 +71,7 @@
 	<h1>working papers</h1>
 
 <br></br>
-	Brock, Michelle, Kathryn Vasilaky, "Traversing the Landscape of Statiscal Power," (2019), <em></em> R&R.
+	Brock, Michelle, Kathryn Vasilaky, "Power(ful) Guidelines for Experimental Economists," (2019), <em></em> R&R.
 	<br></br>
 	Martinez, Sofia, Daniel Osgood, Radomst Stanimirova, Kathryn Vasilkay, "Diversification or Defection?: Randomizing Information About Members in Insurance Groups," (2019), <em></em> R&R.
 	<br></br>
