--- a/publications.html
+++ b/publications.html
@@ -73,7 +73,7 @@
 <br></br>
 	Brock, Michelle, Kathryn Vasilaky, "Power(ful) Guidelines for Experimental Economists," (2019), <em></em> R&R.
 	<br></br>
-	Martinez, Sofia, Daniel Osgood, Radomst Stanimirova, Kathryn Vasilkay, "Diversification or Defection?: Randomizing Information About Members in Insurance Groups," (2019), <em></em> R&R.
+	Martinez, Sofia, Daniel Osgood, Radomst Stanimirova, Kathryn Vasilkay, "Perceptions of farm size heterogeneity and demand forgroup index insurance," (2019), <em></em> R&R.
 	<br></br>
 	Buehren, Niklas, Markus Goldstein, Kenneth Leonard, Joao Montalvao, Kathryn Vasilaky, "Girls' Empowerment, Sibling Rivalry, and Competitiveness: Evidence from a Randomized Control Trial and a Lab Experiment in Uganda," (2019) <em> </em>  R&R.
 	<br></br>
