--- a/publications.html
+++ b/publications.html
@@ -91,7 +91,7 @@
 	<br></br>
 	Vasilaky, Kathryn, "A Generalized Ridge Regression Using an Iterative Solution: the Inverse Problem in Regression Analysis with a Stopping Rule," Columbia University<em>, <a href="http://academiccommons.columbia.edu/catalog/ac%3A194857">Working Paper</a></em>, (2016) and accompanying <a href="https://github.com/kathrynthegreat/InverseProblem">git repo</a>. 
 	<br></br>
-	Vasilaky, Kathryn and Aurelie Harou, Chia-Ying Lee, and Daniel Osgood, "Measuring the Impact of Timely Disaster Response in the Philippines using Weather Extremes,"<em> Working Paper, (2017)</em>.
+	Harou, Aurelie, Chia-Ying Lee, Daniel Osgood, Kathryn Vasilaky, "Measuring the Impact of Timely Disaster Response in the Philippines using Weather Extremes,"<em> Working Paper, (2017)</em>.
 	<br></br>
 	
 	<h1>unpublished papers</h1>
