--- a/cv.html
+++ b/cv.html
@@ -56,7 +56,7 @@
 						
 						<h1><a href="https://github.com/kathrynthegreat/kathrynthegreat.github.io/blob/master/VASILAKY_CV1.pdf"> <font color="#0183E5"><noframes></noframes> cv</font></a> </h1>
 						<p>
-						<img src="kv2.jpg" style="width:300px;height:30;">
+						<img src="kv3.png" style="width:300px;height:30;">
 						</p>
 
 						</br>
