--- a/publications.html
+++ b/publications.html
@@ -84,7 +84,7 @@
 	<br></br>
 	Hill, Ruth, Carolina Mejia-Mantilla, Kathryn Vasilaky, "Vanishing Returns? Potential Returns and Constraints to Input Adoption among Smallholder Farmers in Uganda." World Bank Research Paper Vol. 1, No. 8627, (2020) <em><a href="http://documents.worldbank.org/curated/en/726321540832524595/Vanishing-Returns-Potential-Returns-and-Constraints-to-Input-Adoption-among-Smallholder-Farmers-in-Uganda">Working Paper</a></em>.
 	<br></br>
-	<!--Flory, Jeffrey, Kenneth Leonard, Magda Tsaneva and Kathryn Vasilaky, "Towards a Deeper Understanding of Female Competitiveness and the Gender Gap: Evidence from Patrilocal and Matrilocal Cultures using a Lab Experiment in the Field" (2017).-->
+	Flory, Jeffrey, Kenneth Leonard, Magda Tsaneva and Kathryn Vasilaky, "Towards a Deeper Understanding of Female Competitiveness and the Gender Gap: Evidence from Patrilocal and Matrilocal Cultures using a Lab Experiment in the Field" (2019).
 	<br></br>
 	Baul, Tushi, Dean Karlan, Kentaro Toyama, Kathryn Vasilaky "Improving Smallholder Agriculture via Video-BasedGroup Extension" Jameel Poverty Action Lab,<em> Working Paper, (2020)</em>, and <a href="https://www.socialscienceregistry.org/trials/313"> Social Registry Trial 313.</a>, <a href="https://editorialexpress.com/cgi-bin/conference/download.cgi?db_name=NEUDC2015&paper_id=519 ">draft.</a>
 	
