job pages added

--- a/posts.html
+++ b/posts.html
@@ -42,7 +42,8 @@
 								<br></br>
 								<a href="posts.html">seminars</a><br />
 								<br></br>
-
+								<a href="joblistings.html">seminars</a><br />
+								<br></br>
 								<a href="cv.html">cv</a><br />
 				 			 </div>
 							 
