--- a/field.html
+++ b/field.html
@@ -44,7 +44,8 @@
 								<br></br>
 								<a href="posts.html">seminars</a><br />
 								<br></br>
-
+								<a href="joblistings.html">seminars</a><br />
+								<br></br>
 								<a href="cv.html">cv</a><br />
 				 			 </div>
 							 
