--- a/teaching.html
+++ b/teaching.html
@@ -43,7 +43,8 @@
 								<br></br>
 								<a href="posts.html">seminars</a><br />
 								<br></br>
-
+								<a href="joblistings.html">seminars</a><br />
+								<br></br>
 								<a href="cv.html">cv</a><br />
 
 
