--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 								<br></br>
 								<a href="posts.html">seminars</a><br />
 								<br></br>
-								<a href="joblistings.html">seminars</a><br />
+								<a href="joblistings.html">job listings</a><br />
 								<br></br>
 								<a href="cv.html">cv</a><br />
 				 			 </div>
