--- a/joblistings.html
+++ b/joblistings.html
@@ -61,9 +61,9 @@ Project Jupyter internships, <a href="UIUXDescription.pdf">UIUX</a> and <a href=
 <br></br>
 Behavioral Economis Lab, Yale University, <a href="http://www.crockettlab.org/join-us">annoucement</a>, New Haven, CT
 <br></br>
-Research assistant position in decision neuroscience, Pitt University, <a href="pitt.png">annoucement</a>, Pittsburgh, PA
+Research assistant position in decision neuroscience, Pitt University, <a href="pitt2.png">annoucement</a>, Pittsburgh, PA
 <br></br>
-Behavioral research in environment<a href="https://careers-rare.icims.com/jobs/"></a>, Pittsburgh, PA
+Behavioral research in environment<a href="https://careers-rare.icims.com/jobs/">Rare</a>, Pittsburgh, PA
 <br></br>
 Behavioral econ research at <a href="https://www.busaracenter.org/">Busara Center</a> <a href="https://apply.workable.com/busara/">apply</a>, Kenya/Nigeria/India
 <br></br>
