--- a/joblistings.html
+++ b/joblistings.html
@@ -53,7 +53,7 @@
 							</div>
 				<div id="content">
 				
-						<h1>job listings in dev econ/data/programming for undergraduate econ majors</h1>
+						<h1>job listings in dev econ/data/programming</h1>
 
 						
 <br></br>
