--- a/joblistings.html
+++ b/joblistings.html
@@ -59,13 +59,13 @@
 <br></br>
 Project Jupyter internships, <a href="UIUXDescription.pdf">UIUX</a> and <a href="SEDescription.pdf">SE</a>, Cal Poly, CA
 <br></br>
-Behavioral Economis Lab, Yale University, <a href="http://www.crockettlab.org/join-us">annoucement</a>, New Haven, CT
+Behavioral economis lab, Yale University, <a href="http://www.crockettlab.org/join-us">annoucement</a>, New Haven, CT
 <br></br>
 Research assistant position in decision neuroscience, Pitt University, <a href="pitt2.png">annoucement</a>, Pittsburgh, PA
 <br></br>
-Behavioral research in environment<a href="https://careers-rare.icims.com/jobs/"> Rare</a>, Pittsburgh, PA
+Behavioral research in environment, <a href="https://careers-rare.icims.com/"> Rare</a>, <a href="https://careers-rare.icims.com/jobs/">annoucement</a>, Pittsburgh, PA
 <br></br>
-Behavioral econ research at <a href="https://www.busaracenter.org/">Busara Center</a> <a href="https://apply.workable.com/busara/">apply</a>, Kenya/Nigeria/India
+Behavioral econ research,<a href="https://www.busaracenter.org/"> Busara Center</a> <a href="https://apply.workable.com/busara/">apply</a>, Kenya/Nigeria/India
 <br></br>
 
 
