--- a/joblistings.html
+++ b/joblistings.html
@@ -53,7 +53,7 @@
 							</div>
 				<div id="content">
 				
-						<h1>job listings in dev econ/data/programming</h1>
+						<h1>recent job listings in dev econ/data/programming</h1>
 
 						
 <br></br>
@@ -63,11 +63,10 @@ Behavioral economis lab, Yale University, <a href="http://www.crockettlab.org/jo
 <br></br>
 Research assistant position in decision neuroscience, Pitt University, <a href="pitt2.png">annoucement</a>, Pittsburgh, PA
 <br></br>
-Behavioral research in environment, <a href="https://careers-rare.icims.com/"> Rare</a>, <a href="https://careers-rare.icims.com/jobs/">annoucement</a>, Pittsburgh, PA
+Behavioral research in environment, <a href="https://careers-rare.icims.com/"> Rare</a>, <a href="https://careers-rare.icims.com/jobs/">jobs</a>, Pittsburgh, PA
 <br></br>
 Behavioral econ research,<a href="https://www.busaracenter.org/"> Busara Center</a> <a href="https://apply.workable.com/busara/">apply</a>, Kenya/Nigeria/India
 <br></br>
-
 
 
 
