--- a/joblistings.html
+++ b/joblistings.html
@@ -65,7 +65,7 @@ Research assistant position in decision neuroscience, Pitt University, <a href="
 <br></br>
 Behavioral research in environment, <a href="https://careers-rare.icims.com/"> Rare</a>, <a href="https://careers-rare.icims.com/jobs/">jobs</a>, Pittsburgh, PA
 <br></br>
-Behavioral econ research,<a href="https://www.busaracenter.org/"> Busara Center</a> <a href="https://apply.workable.com/busara/">apply</a>, Kenya/Nigeria/India
+Behavioral econ research,<a href="https://www.busaracenter.org/"> Busara Center</a> <a href="https://apply.workable.com/busara/">, apply</a>, Kenya/Nigeria/India
 <br></br>
 
 
