--- a/publications.html
+++ b/publications.html
@@ -58,6 +58,8 @@
 <p> <br></br>
 	Z. Ovaisi, R. Ahsan, Y. Zhang, K. Vasilaky, E. Zheleva, "<a href= https://www2020.thewebconf.org/program>Correcting for Selection Bias in Learning-to-rank Systems.</a>," (2020) <em> 29th International World Wide Web Conference (WWW/WebConf).</em><a href= https://arxiv.org/abs/2001.11358> Arxiv.</a>
 	<br></br>
+	Buehren, Niklas, Markus Goldstein, Kenneth Leonard, Joao Montalvao, Kathryn Vasilaky, "Girls' Empowerment, Sibling Rivalry, and Competitiveness: Evidence from a Randomized Control Trial and a Lab Experiment in Uganda," (2020) <em>Economic Development and Cultural Change, forthcoming </em>.
+	<br></br>
 	Vasilaky, Kathryn, Rahel Diro, Michael Norton, Geoff McCarnery, and Daniel Osgood, "<a href = https://www.tandfonline.com/doi/abs/10.1080/00220388.2018.1554207> Can Education Unlock Scale? The Demand Impact of Educational Games on a Large-Scale Unsubsidised Index Insurance Programme in Ethiopia</a>," (2018) <em> Journal of Development Studies, DOI: 10.1080/00220388.2018.1554207</em>.
 	
 	<br></br>
@@ -76,9 +78,7 @@
 	<br></br>
 	Martinez, Sofia, Daniel Osgood, Radomst Stanimirova, Kathryn Vasilkay, "Perceptions of farm size heterogeneity and demand for group index insurance," (2020), <em></em> R&R.
 	<br></br>
-	Buehren, Niklas, Markus Goldstein, Kenneth Leonard, Joao Montalvao, Kathryn Vasilaky, "Girls' Empowerment, Sibling Rivalry, and Competitiveness: Evidence from a Randomized Control Trial and a Lab Experiment in Uganda," (2020) <em> </em>  R&R.
-	<br></br>
-	Alfredo, Katherine, Aurelie Harou, Ishita Kapur, Kathryn Vasilaky, "Water Depletion in Northern India: Myself or Others?" (2019),  <em></em> R&R.
+	Alfredo, Katherine, Aurelie Harou, Ishita Kapur, Kathryn Vasilaky, "Water Depletion in Northern India: Myself or Others?" (2019)<em></em>.
 	
 	<!-- World Bank Research Paper Vol. 12, No. 33, (2016) <em><a href="http://documents.worldbank.org/curated/en/743031468186845532/Womens-empowerment-sibling-rivalry-and-competitiveness-evidence-from-a-lab-experiment-and-a-randomized-control-trial-in-Uganda">Economic Development and Cultural Change</a></em>.-->
 	
