--- a/publications.html
+++ b/publications.html
@@ -56,17 +56,18 @@
 <h1>publications</h1>
 						
 <p> <br></br>
-	Z. Ovaisi, R. Ahsan, Y. Zhang, K. Vasilaky, E. Zheleva, "<a href= https://www2020.thewebconf.org/program>Correcting for Selection Bias in Learning-to-rank Systems.</a>," (2020) <em> 29th International World Wide Web Conference (WWW/WebConf).</em><a href= https://arxiv.org/abs/2001.11358> Arxiv.</a>
+	Ovaisi, Zohreh, Ragib Ahsan, Yifan Zhang, Kathryn Vasilaky, Elena Zheleva, "<a href= https://www2020.thewebconf.org/program>Correcting for Selection Bias in Learning-to-rank Systems.</a>," (2020) <em> 29th International World Wide Web Conference (WWW/WebConf).</em><a href= https://arxiv.org/abs/2001.11358> Arxiv.</a>
 	<br></br>
-	Buehren, Niklas, Markus Goldstein, Kenneth Leonard, Joao Montalvao, Kathryn Vasilaky, "Girls' Empowerment, Sibling Rivalry, and Competitiveness: Evidence from a Randomized Control Trial and a Lab Experiment in Uganda," (2020) <em>Economic Development and Cultural Change, forthcoming </em>.
+	Buehren, Niklas, and Markus Goldstein, Kenneth Leonard, Joao Montalvao, Kathryn Vasilaky, "Girls' Empowerment, Sibling Rivalry, and Competitiveness: Evidence from a Randomized Control Trial and a Lab Experiment in Uganda," (2020) <em>Economic Development and Cultural Change, forthcoming </em>.
 	<br></br>
-	Vasilaky, Kathryn, Rahel Diro, Michael Norton, Geoff McCarnery, and Daniel Osgood, "<a href = https://www.tandfonline.com/doi/abs/10.1080/00220388.2018.1554207> Can Education Unlock Scale? The Demand Impact of Educational Games on a Large-Scale Unsubsidised Index Insurance Programme in Ethiopia</a>," (2018) <em> Journal of Development Studies, DOI: 10.1080/00220388.2018.1554207</em>.
-	
+	Vasilaky, Kathryn, Sofia Sofia, Daniel Osgood, Radomst Stanimirova, "Perceptions of farm size heterogeneity and demand for group index insurance," (2020), <em>Games, forthcoming</em>.
 	<br></br>
-	Vasilaky, Kathryn and Kenneth Leonard, "<a href = https://www.journals.uchicago.edu/doi/10.1086/697430> As Good as the Networks They Keep?: Improving Outcomes through Weak Ties in Uganda</a>," (2018) <em> Economic Development and Cultural Change, 66(4): 755-792. </em>
+	Vasilaky, Kathryn, Rahel Diro, Michael Norton, Geoff McCarnery, and Daniel Osgood, "<a href = https://www.tandfonline.com/doi/abs/10.1080/00220388.2018.1554207> Can Education Unlock Scale? The Demand Impact of Educational Games on a Large-Scale Unsubsidised Index Insurance Programme in Ethiopia</a>," (2019) <em> Journal of Development Studies, DOI: 10.1080/00220388.2018.1554207</em>.
+	<br></br>
+	Vasilaky, Kathryn, Kenneth Leonard, "<a href = https://www.journals.uchicago.edu/doi/10.1086/697430> As Good as the Networks They Keep?: Improving Outcomes through Weak Ties in Uganda</a>," (2018) <em> Economic Development and Cultural Change, 66(4): 755-792. </em>
 	(<a href="target_input_model.pdf">Supplementary derivations,</a> for the Target-Input model with Bayesian updating)
 	<br></br>
-	Vasilaky, Kathryn and Asif Islam, "<a href= https://www.sciencedirect.com/science/article/pii/S0305750X17303479>By Team or By Tournament? Incentives for Sharing Information in an Experimental Game</a>," (2018) <em> World Development, 103: 216-225.
+	Vasilaky, Kathryn, Asif Islam, "<a href= https://www.sciencedirect.com/science/article/pii/S0305750X17303479>By Team or By Tournament? Incentives for Sharing Information in an Experimental Game</a>," (2018) <em> World Development, 103: 216-225.
 	<br></br>
 	Vasilaky, Kathryn, "<a href= https://academic.oup.com/ajae/article-abstract/95/2/376/70881?redirectedFrom=fulltext>Female Social Networks and Farmer Training: Can Randomized Information Exchange Improve Outcomes?</a>," (2013) <em> American Journal of Agricultural Economics, 95(2): 376-383.</em>
 	<br></br>
@@ -74,9 +75,7 @@
 	<h1>working papers</h1>
 
 <br></br>
-	Brock, Michelle, Kathryn Vasilaky, "Power(ful) Guidelines for Experimental Economists," (2020), <em></em> R&R.
-	<br></br>
-	Martinez, Sofia, Daniel Osgood, Radomst Stanimirova, Kathryn Vasilkay, "Perceptions of farm size heterogeneity and demand for group index insurance," (2020), <em></em> R&R.
+	Vasilaky, Kathryn, Michelle Brock, "Power(ful) Guidelines for Experimental Economists," (2020), <em></em> R&R.
 	<br></br>
 	Alfredo, Katherine, Aurelie Harou, Ishita Kapur, Kathryn Vasilaky, "Water Depletion in Northern India: Myself or Others?" (2019)<em></em>.
 	
@@ -85,7 +84,7 @@
 	<br></br>
 	Hill, Ruth, Carolina Mejia-Mantilla, Kathryn Vasilaky, "Vanishing Returns? Potential Returns and Constraints to Input Adoption among Smallholder Farmers in Uganda." World Bank Research Paper Vol. 1, No. 8627, (2020) <em><a href="http://documents.worldbank.org/curated/en/726321540832524595/Vanishing-Returns-Potential-Returns-and-Constraints-to-Input-Adoption-among-Smallholder-Farmers-in-Uganda">Working Paper</a></em>.
 	<br></br>
-	Flory, Jeffrey, Kenneth Leonard, Magda Tsaneva and Kathryn Vasilaky, "Towards a Deeper Understanding of Female Competitiveness and the Gender Gap: Evidence from Patrilocal and Matrilocal Cultures using a Lab Experiment in the Field" (2019).
+	Flory, Jeffrey, Kenneth Leonard, Magda Tsaneva, Kathryn Vasilaky, "Towards a Deeper Understanding of Female Competitiveness and the Gender Gap: Evidence from Patrilocal and Matrilocal Cultures using a Lab Experiment in the Field" (2019).
 	<br></br>
 	Baul, Tushi, Dean Karlan, Kentaro Toyama, Kathryn Vasilaky "Improving Smallholder Agriculture via Video-BasedGroup Extension" Jameel Poverty Action Lab,<em> Working Paper, (2020)</em>, and <a href="https://www.socialscienceregistry.org/trials/313"> Social Registry Trial 313.</a>, <a href="https://editorialexpress.com/cgi-bin/conference/download.cgi?db_name=NEUDC2015&paper_id=519 ">draft.</a>
 	
