--- a/publications.html
+++ b/publications.html
@@ -58,7 +58,7 @@
 <p> <br></br>
 	Ovaisi, Zohreh, Ragib Ahsan, Yifan Zhang, Kathryn Vasilaky, Elena Zheleva, "<a href= https://www2020.thewebconf.org/program>Correcting for Selection Bias in Learning-to-rank Systems.</a>," (2020) <em> 29th International World Wide Web Conference (WWW/WebConf).</em><a href= https://arxiv.org/abs/2001.11358> Arxiv.</a>
 	<br></br>
-	Buehren, Niklas, and Markus Goldstein, Kenneth Leonard, Joao Montalvao, Kathryn Vasilaky, "Girls' Empowerment, Sibling Rivalry, and Competitiveness: Evidence from a Randomized Control Trial and a Lab Experiment in Uganda," (2020) <em>Economic Development and Cultural Change, forthcoming </em>.
+	Buehren, Niklas, and Markus Goldstein, Kenneth Leonard, Joao Montalvao, Kathryn Vasilaky, "<a href = http://documents.worldbank.org/curated/en/743031468186845532/Womens-empowerment-sibling-rivalry-and-competitiveness-evidence-from-a-lab-experiment-and-a-randomized-control-trial-in-Uganda> Girls' Empowerment, Sibling Rivalry, and Competitiveness: Evidence from a Randomized Control Trial and a Lab Experiment in Uganda</a>," (2020) <em>Economic Development and Cultural Change, forthcoming </em>.
 	<br></br>
 	Vasilaky, Kathryn, Sofia Sofia, Daniel Osgood, Radomst Stanimirova, "Perceptions of farm size heterogeneity and demand for group index insurance," (2020), <em>Games, forthcoming</em>.
 	<br></br>
