--- a/publications.html
+++ b/publications.html
@@ -58,7 +58,7 @@
 <p> <br></br>
 	Ovaisi, Zohreh, Ragib Ahsan, Yifan Zhang, Kathryn Vasilaky, Elena Zheleva, "<a href= https://www2020.thewebconf.org/program>Correcting for Selection Bias in Learning-to-rank Systems.</a>," (2020) <em> 29th International World Wide Web Conference (WWW/WebConf).</em><a href= https://arxiv.org/abs/2001.11358> Arxiv.</a>
 	<br></br>
-	Buehren, Niklas, and Markus Goldstein, Kenneth Leonard, Joao Montalvao, Kathryn Vasilaky, "<a href = http://documents.worldbank.org/curated/en/743031468186845532/Womens-empowerment-sibling-rivalry-and-competitiveness-evidence-from-a-lab-experiment-and-a-randomized-control-trial-in-Uganda> Girls' Empowerment, Sibling Rivalry, and Competitiveness: Evidence from a Randomized Control Trial and a Lab Experiment in Uganda</a>," (2020) <em>Economic Development and Cultural Change, forthcoming </em>.
+	Buehren, Niklas, and Markus Goldstein, Kenneth Leonard, Joao Montalvao, Kathryn Vasilaky, <a href="ELA_competition.pdf">Spillover Effects of Girls’ Empowerment on Brothers’ Competitiveness: Evidence from a Lab-in-the-Field Experiment in Uganda,</a> (2020) <em>Economic Development and Cultural Change, forthcoming </em>.
 	<br></br>
 	Vasilaky, Kathryn, Sofia Sofia, Daniel Osgood, Radomst Stanimirova, "Perceptions of farm size heterogeneity and demand for group index insurance," (2020), <em>Games, forthcoming</em>.
 	<br></br>
@@ -101,14 +101,17 @@
 
 	<h1>reports</h1>
 	<br></br>
-	Vasilaky, Kathryn and Kenneth Leonard, "Improving Social Networks for Ugandan Farmers," Gender Innovation Lab Policy Brief, World Bank Report, (2016) <em><a href="http://www.worldbank.org/en/programs/africa-gender-innovation-lab/brief/improving-social-networks-for-ugandan-farmers#">Report</a></em>.
-	
-
-					
-
-	<h1>blog posts</h1>
-
+	Vasilaky, Kathryn and Kenneth Leonard, "Improving Social Networks for Ugandan Farmers" (2016) <em><a href="http://www.worldbank.org/en/programs/africa-gender-innovation-lab/brief/improving-social-networks-for-ugandan-farmers#">Gender Innovation Lab Policy Brief, World Bank Report</a></em>.
+	<br></br>
+	Buehren, Niklas, and Markus Goldstein, Kenneth Leonard, Joao Montalvao, Kathryn Vasilaky, "Girls' Empowerment, Sibling Rivalry, and Competitiveness: Evidence from a Randomized Control Trial and a Lab Experiment in Uganda" (2016) <em><a href = "http://documents.worldbank.org/curated/en/743031468186845532/Womens-empowerment-sibling-rivalry-and-competitiveness-evidence-from-a-lab-experiment-and-a-randomized-control-trial-in-Uganda>Report"</a></em>.
+	<br></br>
 	<a href="http://www.worldbank.org/en/programs/africa-gender-innovation-lab/brief/improving-social-networks-for-ugandan-farmers#">World Bank Policy brief</a> on using local social networks in agricultural training.
+
+
+
+	<h1>posts</h1>
+
+	
 	<br></br>
 	<a href="http://iri.columbia.edu/news/video-what-tools-do-honduran-farmers-want-for-climate-risk/">Field video</a><strong></strong> from International Research Institute, Columbia University on Micro Insurance in Honduras.
 	<br></br>
