--- a/publications.html
+++ b/publications.html
@@ -60,7 +60,7 @@
 	<br></br>
 	Buehren, Niklas, and Markus Goldstein, Kenneth Leonard, Joao Montalvao, Kathryn Vasilaky, <a href="ELA_competition.pdf">Spillover Effects of Girls’ Empowerment on Brothers’ Competitiveness: Evidence from a Lab-in-the-Field Experiment in Uganda,</a> (2020) <em>Economic Development and Cultural Change, forthcoming </em>.
 	<br></br>
-	Vasilaky, Kathryn, Sofia Mart&iacutenez, Radomst Stanimirova, Daniel Osgood "Perceptions of farm size heterogeneity and demand for group index insurance," (2020), <em>Games, forthcoming</em>.
+	Vasilaky, Kathryn, Sof&iacutea Mart&iacutenez S&aacuteez, Radomst Stanimirova, Daniel Osgood "Perceptions of farm size heterogeneity and demand for group index insurance," (2020), <em>Games, forthcoming</em>.
 	<br></br>
 	Vasilaky, Kathryn, Rahel Diro, Michael Norton, Geoff McCarnery, and Daniel Osgood, "<a href = https://www.tandfonline.com/doi/abs/10.1080/00220388.2018.1554207> Can Education Unlock Scale? The Demand Impact of Educational Games on a Large-Scale Unsubsidised Index Insurance Programme in Ethiopia</a>," (2019) <em> Journal of Development Studies, DOI: 10.1080/00220388.2018.1554207</em>.
 	<br></br>
