--- a/publications.html
+++ b/publications.html
@@ -77,7 +77,7 @@
 <br></br>
 	Vasilaky, Kathryn, Michelle Brock, "Power(ful) Guidelines for Experimental Economists," (2020), <em></em> R&R.
 	<br></br>
-	Alfredo, Katherine, Aurelie Harou, Ishita Kapur, Kathryn Vasilaky, "Water Depletion in Northern India: Myself or Others?" (2019)<em></em>.
+	Alfredo, Katherine, Aur&eacutelie Harou, Ishita Kapur, Kathryn Vasilaky, "Water Depletion in Northern India: Myself or Others?" (2019)<em></em>.
 	
 	<!-- World Bank Research Paper Vol. 12, No. 33, (2016) <em><a href="http://documents.worldbank.org/curated/en/743031468186845532/Womens-empowerment-sibling-rivalry-and-competitiveness-evidence-from-a-lab-experiment-and-a-randomized-control-trial-in-Uganda">Economic Development and Cultural Change</a></em>.-->
 	
@@ -91,7 +91,7 @@
 	<br></br>
 	Vasilaky, Kathryn, "A Generalized Ridge Regression Using an Iterative Solution: the Inverse Problem in Regression Analysis with a Stopping Rule," Columbia University<em>, <a href="http://academiccommons.columbia.edu/catalog/ac%3A194857">Working Paper</a></em>, (2019) and accompanying <a href="https://github.com/kathrynthegreat/InverseProblem">git repo</a>. 
 	<br></br>
-	Harou, Aurelie, Chia-Ying Lee, Daniel Osgood, Kathryn Vasilaky, "Measuring the Impact of Timely Disaster Response in the Philippines using Weather Extremes,"<em> Working Paper, (2019)</em>.
+	Harou, Aur&eacutelie, Chia-Ying Lee, Daniel Osgood, Kathryn Vasilaky, "Measuring the Impact of Timely Disaster Response in the Philippines using Weather Extremes,"<em> Working Paper, (2019)</em>.
 	<br></br>
 	
 	<h1>unpublished papers</h1>
