--- a/joblistings.html
+++ b/joblistings.html
@@ -57,6 +57,9 @@
 
 						
 <br></br>
+Buzz Feed, <a href="https://www.buzzfeed.com/">UIUX</a> News Data Analyst <a href="https://boards.greenhouse.io/buzzfeed/jobs/2117225?gh_jid=2117225">SE</a>, New York, NY.
+<br></br>
+
 Project Jupyter internships, <a href="UIUXDescription.pdf">UIUX</a> and <a href="SEDescription.pdf">SE</a>, Cal Poly, CA
 <br></br>
 Behavioral economis lab, Yale University, <a href="http://www.crockettlab.org/join-us">annoucement</a>, New Haven, CT
