--- a/joblistings.html
+++ b/joblistings.html
@@ -55,7 +55,9 @@
 				
 						<h1>recent job listings in dev econ/data/programming</h1>
 
-						
+
+<br></br>
+Full-Time Research Assistant position at UCLA Anderson, <a href="ucla.png">annoucement</a>, Los Angelese, CA					
 <br></br>
 Buzz Feed, <a href="https://www.buzzfeed.com/">UIUX</a> News Data Analyst <a href="https://boards.greenhouse.io/buzzfeed/jobs/2117225?gh_jid=2117225">SE</a>, New York, NY.
 <br></br>
