--- a/publications.html
+++ b/publications.html
@@ -103,7 +103,7 @@
 	<br></br>
 	Vasilaky, Kathryn and Kenneth Leonard, "Improving Social Networks for Ugandan Farmers" (2016) <em><a href="http://www.worldbank.org/en/programs/africa-gender-innovation-lab/brief/improving-social-networks-for-ugandan-farmers#">Gender Innovation Lab Policy Brief, World Bank Report</a></em>.
 	<br></br>
-	Buehren, Niklas, and Markus Goldstein, Kenneth Leonard, Joao Montalvao, Kathryn Vasilaky, "Girls' Empowerment, Sibling Rivalry, and Competitiveness: Evidence from a Randomized Control Trial and a Lab Experiment in Uganda" (2016) <em><a href = "http://documents.worldbank.org/curated/en/743031468186845532/Womens-empowerment-sibling-rivalry-and-competitiveness-evidence-from-a-lab-experiment-and-a-randomized-control-trial-in-Uganda>Report"</a></em>.
+	Buehren, Niklas, and Markus Goldstein, Kenneth Leonard, Joao Montalvao, Kathryn Vasilaky, <em><a href = "http://documents.worldbank.org/curated/en/743031468186845532/Womens-empowerment-sibling-rivalry-and-competitiveness-evidence-from-a-lab-experiment-and-a-randomized-control-trial-in-Uganda>Report">World Bank Report Number WPS7699</a></em>.
 	<br></br>
 	<a href="http://www.worldbank.org/en/programs/africa-gender-innovation-lab/brief/improving-social-networks-for-ugandan-farmers#">World Bank Policy brief</a> on using local social networks in agricultural training.
 
