--- a/joblistings.html
+++ b/joblistings.html
@@ -55,7 +55,8 @@
 				
 						<h1>recent job listings in dev econ/data/programming</h1>
 
-
+<br></br>
+Data Scientist - Decision Science at Blackboard Insurance, <a href="https://boards.greenhouse.io/blackboardinsurance/jobs/4671017002">annoucement</a>, New York, NY				
 <br></br>
 Full-Time Research Assistant position at UCLA Anderson, <a href="ucla.png">annoucement</a>, Los Angelese, CA					
 <br></br>
