--- a/joblistings.html
+++ b/joblistings.html
@@ -53,27 +53,27 @@
 							</div>
 				<div id="content">
 				
-						<h1>recent job listings in dev econ/data/programming</h1>
+						<h1>job listings in data/programming/experiments</h1>
 
 <br></br>
-Data Scientist - Decision Science at Blackboard Insurance, <a href="https://boards.greenhouse.io/blackboardinsurance/jobs/4671017002">annoucement</a>, New York, NY				
+Data Scientist - Decision Science at Blackboard Insurance, <a href="https://boards.greenhouse.io/blackboardinsurance/jobs/4671017002">apply</a>, New York, NY				
 <br></br>
-Full-Time Research Assistant position at UCLA Anderson, <a href="ucla.png">annoucement</a>, Los Angelese, CA					
+Full-Time Research Assistant position at UCLA Anderson, <a href="ucla.png">apply</a>, Los Angelese, CA					
 <br></br>
-Buzz Feed, <a href="https://www.buzzfeed.com/">UIUX</a> News Data Analyst <a href="https://boards.greenhouse.io/buzzfeed/jobs/2117225?gh_jid=2117225">SE</a>, New York, NY.
+Buzz Feed, <a href="https://www.buzzfeed.com/">apply UIUX</a> News Data Analyst <a href="https://boards.greenhouse.io/buzzfeed/jobs/2117225?gh_jid=2117225">SE</a>, New York, NY.
 <br></br>
 
-Project Jupyter internships, <a href="UIUXDescription.pdf">UIUX</a> and <a href="SEDescription.pdf">SE</a>, Cal Poly, CA
+Project Jupyter internships, <a href="UIUXDescription.pdf">apply UIUX</a> and <a href="SEDescription.pdf">apply SE</a>, Cal Poly, CA
 <br></br>
-Behavioral economis lab, Yale University, <a href="http://www.crockettlab.org/join-us">annoucement</a>, New Haven, CT
+Behavioral economis lab, Yale University, <a href="http://www.crockettlab.org/join-us">apply</a>, New Haven, CT
 <br></br>
-Research assistant position in decision neuroscience, Pitt University, <a href="pitt2.png">annoucement</a>, Pittsburgh, PA
+Research assistant position in decision neuroscience, Pitt University, <a href="pitt2.png">apply</a>, Pittsburgh, PA
 <br></br>
-Behavioral research in environment, <a href="https://careers-rare.icims.com/"> Rare</a>, <a href="https://careers-rare.icims.com/jobs/">jobs</a>, Pittsburgh, PA
+Behavioral research in environment, <a href="https://careers-rare.icims.com/"> Rare</a>, <a href="https://careers-rare.icims.com/jobs/">apply</a>, Pittsburgh, PA
 <br></br>
-Behavioral econ research,<a href="https://www.busaracenter.org/"> Busara Center</a> <a href="https://apply.workable.com/busara/">, apply</a>, Kenya/Nigeria/India
+Behavioral econ research,<a href="https://www.busaracenter.org/">Busara Center</a> <a href="https://apply.workable.com/busara/"></a> apply,Kenya/Nigeria/India
 <br></br>
-Development jobs,<a href="https://www.povertyactionlab.org/"> Jameel Poverty Action Lab</a> <a href="https://www.povertyactionlab.org/careers">, apply</a>, US, International
+Development jobs,<a href="https://www.povertyactionlab.org/">Jameel Poverty Action Lab</a> <a href="https://www.povertyactionlab.org/careers"></a> apply, US, International
 <br></br>
 
 
