--- a/joblistings.html
+++ b/joblistings.html
@@ -58,7 +58,7 @@
 <br></br>
 Data Scientist - Decision Science at Blackboard Insurance, <a href="https://boards.greenhouse.io/blackboardinsurance/jobs/4671017002">apply</a>, New York, NY				
 <br></br>
-<a href="ucla.png">Full-Time Research Assistant position</a>, at UCLA Anderson ,<a href="https://hr.mycareer.ucla.edu/applicants/jsp/shared/frameset/Frameset.jsp?time=1585167649200">apply</a>, Los Angelese, CA	
+<a href="ucla.png">Full-Time Research Assistant position</a>, at UCLA Anderson, <a href="https://hr.mycareer.ucla.edu/applicants/jsp/shared/frameset/Frameset.jsp?time=1585167649200">apply</a>, Los Angelese, CA	
 <br></br>
 Buzz Feed, <a href="https://www.buzzfeed.com/">apply UIUX</a> News Data Analyst <a href="https://boards.greenhouse.io/buzzfeed/jobs/2117225?gh_jid=2117225">SE</a>, New York, NY.
 <br></br>
@@ -71,9 +71,9 @@ Research assistant position in decision neuroscience, Pitt University, <a href="
 <br></br>
 Behavioral research in environment, <a href="https://careers-rare.icims.com/"> Rare</a>, <a href="https://careers-rare.icims.com/jobs/">apply</a>, Pittsburgh, PA
 <br></br>
-Behavioral econ research,<a href="https://www.busaracenter.org/">Busara Center</a> <a href="https://apply.workable.com/busara/"></a> apply,Kenya/Nigeria/India
+Behavioral econ research,<a href="https://www.busaracenter.org/">Busara Center,</a> <a href="https://apply.workable.com/busara/"></a> apply, Kenya/Nigeria/India
 <br></br>
-Development jobs,<a href="https://www.povertyactionlab.org/">Jameel Poverty Action Lab</a> <a href="https://www.povertyactionlab.org/careers"></a> apply, US, International
+Development jobs,<a href="https://www.povertyactionlab.org/">Jameel Poverty Action Lab,</a> <a href="https://www.povertyactionlab.org/careers"></a> apply, US, International
 <br></br>
 
 
