--- a/joblistings.html
+++ b/joblistings.html
@@ -71,9 +71,9 @@ Research assistant position in decision neuroscience, Pitt University, <a href="
 <br></br>
 Behavioral research in environment, <a href="https://careers-rare.icims.com/"> Rare</a>, <a href="https://careers-rare.icims.com/jobs/">apply</a>, Pittsburgh, PA
 <br></br>
-Behavioral econ research,<a href="https://www.busaracenter.org/">Busara Center,</a> <a href="https://apply.workable.com/busara/"></a> apply, Kenya/Nigeria/India
+Behavioral econ research,<a href="https://www.busaracenter.org/">Busara Center,</a> <a href="https://apply.workable.com/busara/">apply</a>, Kenya/Nigeria/India
 <br></br>
-Development jobs,<a href="https://www.povertyactionlab.org/">Jameel Poverty Action Lab,</a> <a href="https://www.povertyactionlab.org/careers"></a> apply, US, International
+Development jobs,<a href="https://www.povertyactionlab.org/">Jameel Poverty Action Lab,</a> <a href="https://www.povertyactionlab.org/careers">apply</a>, US, International
 <br></br>
 
 
